--- a/index.html
+++ b/index.html
@@ -127,19 +127,20 @@
                 <div class="col-md-6">
                   <div class="detail_box">
                     <h2>
-                      <span> حبر طابعات ام جي</span>
+                      <span> احبار متوافقة لجميع الطابعات</span>
                       <hr>
                     </h2>
                     <h1>
 حبر طابعات ام جي
                     </h1>
                     <p>
-طلب الان حبر طابعات في اي مكان في جدة لنصل اليك في الحال وباسعار مناسبة للجميع اتصل بنا الان
-متواجدون  على مدار ٢٤ ساعة  وخدماتنا في جميع مدن المملكة               
+اطلب حبر الان متـــوافق مع جميع انواع طابعات في اي مكان  لنصل اليك في الحال وباسعار مناسبة للجميع اطلب الان
+متواجدون  على مدار الساعة  وخدماتنا في جميع مدن المملكة               
 
                     </p>
                     <div>
-                      <a href="tel:0530360314">اضغط للاتصال</a>
+					<a href=" https://api.whatsapp.com/send?phone=+966530360314">اطلب وتس</a>
+                      <a href="tel:0530360314">اطلب اتصال</a>
                     
                     </div>
                   </div>
@@ -156,19 +157,20 @@
                 <div class="col-md-6">
                   <div class="detail_box">
                     <h2>
-                      <span> حبر طابعات ام جي</span>
+                      <span> احبار متوافقة اطلب الان</span>
                       <hr>
                     </h2>
                     <h1>
 خدمة توصيل مجاني
                     </h1>
                     <p>
-حبر طابعات MJ  خدمة توصيل مجاني في في جدة وبين مدن المملكة
+خدمة توصيل مجاني في جدة ويوجد شحن لجميع المدن بوسطة شركات النقل المعتمدة وبين مدن المملكة
 
 
                     </p>
                     <div>
-                      <a href="">اضغط للاتصال</a>
+                      <a href=" https://api.whatsapp.com/send?phone=+966530360314">اطلب وتس</a>
+                      <a href="tel:0530360314">اطلب اتصال</a>
                     </div>
                   </div>
                 </div>
@@ -184,19 +186,20 @@
                 <div class="col-md-6">
                   <div class="detail_box">
                     <h2>
-                      <span> حبر طابعات ام جي</span>
+                      <span> خدمات ام جي المجانية</span>
                       <hr>
                     </h2>
                     <h1>
-خدمات الصيانة الدورية  مابعد البيع
+خدمات الصيانة الدورية  المجـــانية
 
                     </h1>
                     <p>
-نقدم لكم خدمات مابعد البيع ونقوم برفع تقرير مفصل عن حاله  الطابعات وصيانتها والتشيك عليها وتنظيفها وكل ما يتعلق بصيانة الطابعات
+نقدم لكم خدمات الصيانة الدورية المجانيـــة من فحص وتنظيف وتشييك  ونقوم برفع تقرير مفصل عن حاله  الطابعات ولتفاصيل اكثر
 اتصل بنا الان عبر الضغط على ارقامنا المباشرة 
                     </p>
                     <div>
-                      <a href="">اضغط للاتصال</a>
+                      <a href=" https://api.whatsapp.com/send?phone=+966530360314">اطلب وتس</a>
+                      <a href="tel:0530360314">اطلب اتصال</a>
                     </div>
                   </div>
                 </div>
@@ -311,7 +314,7 @@
 اتصل بنا الان عبر ارقامنا المباشرة على الموقع لنصل اليك في الحال 
             </p>
             <div>
-              <a href="">
+			<a href=" https://api.whatsapp.com/send?phone=+966530360314">
      اقرأ اكثر
               </a>
             </div>
