--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html dir="rtl">
-
+<html lang="ar">
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -17,7 +17,7 @@
   
   </title>
   
-
+ <link href="images/logo.png" type="image/png" rel="icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
