--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<html dir="rtl">
+<html lang="ar">
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -13,7 +14,7 @@
   <meta name="author" content="" />
 
   <title> حول حبر طابعات ام جي </title>
-
+ <link href="images/logo.png" type="image/png" rel="icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
@@ -97,21 +98,24 @@
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
-              <h2>
-               حول حبر طابعات ام جي MJ
-              </h2>
+              <center> <h2>
+حول احبار طابعات ام جي تونر
+
+              </h2></center>
             </div>
             <p>
-              
-MJ حبر الطابعات ام جي  وخدمة بيع حبر جميع انواع الطابعات وخدمات  ما بعد البيع نقدمها لكم وخدمة التوصيل المجاني نوفر لكم الجهد والوقت والمال
- ونقوم بالتوصيل من الباب الي الباب , توصيل لجميع مدن المملكة اتصل بنا الان واحصل على خصم مباشر وتوصيل مجاني 
- اتصل بنا الان عبر ارقامنا المباشرة على الموقع لنصل اليك في الحال
- 
+			نحن ام جي تونر نوفر لكم جميـــع الاحبار المتوافقة مع طابعات اتش بي  ليزر   hp ,
+			
+			والاحبار المتوافقة مع طابعات كانون Canon Laser زيروكس طابعات ابسون epson وجميع الطابعات الاخرى
+			
+لــدينا خبره في مجال حبر الطابعات لسنوات طويلة في هذا المجال وخدمات وخدمة التوصيل المجاني داخل جدة والشحن لجميع مدن المملكة 
+ نوفر لكم الجهد والوقت والمال ونقوم بالتوصيل من الباب الي الباب ,
+توصيل لجميع مدن المملكة اطلب الان واحصل على خصم مباشر وتوصيل مجاني داخل جده  
+اطلب الان عبر الوتس اب او عبر الاتصال المباشرة  على الموقع لنصل اليك في الحال 
             </p>
             <div>
-              <a href="">
-               اقراء اكثر
-              </a>
+			<a href=" https://api.whatsapp.com/send?phone=+966530360314">
+تفاصيل اكثر              </a>
             </div>
           </div>
         </div>
@@ -144,7 +148,7 @@ MJ حبر الطابعات ام جي  وخدمة بيع حبر جميع انوا
           </div>
           <div class="col-md-3">
             <div class="info_contact">
-              <a href="">
+              <a href="https://goo.gl/maps/uT548PReg2UdWQv78">
                 <img src="images/location.png" alt="">
                 <span>
                   Address
