--- a/jewellery.html
+++ b/jewellery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<html dir="rtl">
+<html lang="ar">
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -13,7 +14,7 @@
   <meta name="author" content="" />
 
   <title>منتجات حبر طابعات ام جي </title>
-
+ <link href="images/logo.png" type="image/png" rel="icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
@@ -237,7 +238,7 @@
           </div>
           <div class="col-md-3">
             <div class="info_contact">
-              <a href="">
+              <a href="https://goo.gl/maps/uT548PReg2UdWQv78">
                 <img src="images/location.png" alt="">
                 <span>
                   Address
