--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<html dir="rtl">
+<html lang="ar">
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -13,7 +14,7 @@
   <meta name="author" content="" />
 
   <title>اتصل بنا حبر طابعات ام جي </title>
-
+ <link href="images/logo.png" type="image/png" rel="icon">
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
@@ -124,7 +125,7 @@
         <div class="col-md-6">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3710.656280685001!2d39.205452924540644!3d21.560291269310174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c3d1f8401b4f0b%3A0x3063e4d56e29563!2zVW5pcXVlIFZpc2lvbiAtINin2K3YqNin2LEg2LfYp9io2LnYp9iq!5e0!3m2!1sar!2ssa!4v1684139928430!5m2!1sar!2ssa" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -151,7 +152,7 @@
           </div>
           <div class="col-md-3">
             <div class="info_contact">
-              <a href="">
+              <a href="https://goo.gl/maps/uT548PReg2UdWQv78">
                 <img src="images/location.png" alt="">
                 <span>
                   Address
