--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
             </p>
             <div>
 			<a href=" https://api.whatsapp.com/send?phone=+966530360314">
-     اقرأ اكثر
-              </a>
+تفاصيل اكثر              </a>
             </div>
           </div>
         </div>
@@ -607,7 +606,7 @@ Razan Musri
           </div>
           <div class="col-md-3">
             <div class="info_contact">
-              <a href="">
+              <a href="https://goo.gl/maps/uT548PReg2UdWQv78">
                 <img src="images/location.png" alt="">
                 <span>
                   Address
